# frank-heretic

./: CMakeLists.txt  README.md  flash.sh  release.sh
drivers/audio/: CMakeLists.txt
src/: doomgeneric_rp2350.c  main.c
src/doomgeneric_fatfs/: m_misc_fatfs.c
src/heretic/: doomgeneric.c  doomgeneric.h  p_setup.c
src/opl/: emu8950.c  opl_pico.c  slot_render.cpp
src/pico/: i_oplmusic.c  i_picosound.c  i_picosound.h
